--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -29,7 +28,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@faker-js/faker": "^8.0.2",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"firebase": "^10.4.0",
+		"openai": "^4.7.1",
 		"sveltefire": "^0.4.2"
 	},
 	"pnpm": {
