--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^1.20.4",
+		"@types/debounce": "^1.2.1",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -30,6 +31,7 @@
 	"dependencies": {
 		"@faker-js/faker": "^8.0.2",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"debounce": "^1.2.1",
 		"firebase": "^10.4.0",
 		"openai": "^4.7.1",
 		"sveltefire": "^0.4.2"
